Fix player moves and background alignment

--- a/code/style.css
+++ b/code/style.css
@@ -3,53 +3,44 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 3vw;
     height: 5vw;
-    border-bottom: 2px solid #DD4A54;
-    position: fixed;
-    width: 89vw;
+    width: 1350px;
     background-color: white;
-    top: 5;
 }
     
 nav > img {
     width: 8vw;
     margin-bottom: 15px;
+    margin-left: 15px;
 }
 
 nav > ul > li {
     background-color: rgb(49, 68, 88);
     color: whitesmoke;
-    font: verdana;
-    font-size: 20px;
+    font: arial;
+    font-size: 18px;
     border-radius: 25px;
     padding: 10px 25px 10px 25px;
     border: 2;
     margin-bottom: 15px;
-
+    margin-right: 15px; 
 }
     
 nav > ul {
     display: flex;
-    width: 12vw;
-    /* justify-content: space-between; */
-    align-items: left;
+    width: 13vw;
 }
 
 body {
-    /* display: flex; */
-    /* flex-direction: row; */
     padding: 10;
     text-align: center;
-    padding: 10px;
+    padding: 23px;
 }
 
-
 #game-board {
-    /* float: left; */
-    width: 800px;
-    padding-top: 80px;
-    /* margin-left: 10px; */
+    width: 1350px;
+    /* background-color: #DD4A54; */
+    border: 2px solid #DD4A54; 
 }
 
 .game-intro {
@@ -58,7 +49,6 @@ body {
     width: 220px;
     margin-top: 100px;
     align-content: right;
-
 }
 
 .game-intro p {
